--- a/st_nucleo_h743zi.cfg
+++ b/st_nucleo_h743zi.cfg
@@ -1,9 +1,9 @@
 # This is an ST NUCLEO-H743ZI board with single STM32H743ZI chip.
 # http://www.st.com/en/evaluation-tools/nucleo-h743zi.html
 
-source [find interface/stlink.cfg]
+source [find interface/cmsis-dap.cfg]
 
-transport select hla_swd
+transport select swd
 
 source [find target/stm32h7x_dual_bank.cfg]
 
